continue with conversion to jquery and variable renaming

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
             <p class="text-faded">Choose a travel mode then enter your origin and destination to visualize your route options. Choose Get Route Info to get the details.</p>
             <!-- <p class="text-faded">Enter your origin and destination to visualize your route options.</p> -->
             <a id="btn_route_info" class="btn btn-default btn-xl js-scroll-trigger">Get Route Info</a>
-            <a class="btn btn-default btn-xl js-scroll-trigger" onclick="clearMarkers(); safestRoute(); window.location.hash = '#map'" >Show Safest Route</a>
-            <a class="btn btn-default btn-xl js-scroll-trigger" onclick="resetMap()" href="#map" >Reset Map</a>
+            <a id="btn_safest_route" class="btn btn-default btn-xl js-scroll-trigger">Show Safest Route</a>
+            <a id="btn_reset_map" class="btn btn-default btn-xl js-scroll-trigger" href="#map" >Reset Map</a>
           </div>
         </div>
       </div>
