fix reset map button and continue cleanup

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <!-- <p class="text-faded">Enter your origin and destination to visualize your route options.</p> -->
             <a id="btn_route_info" class="btn btn-default btn-xl js-scroll-trigger">Get Route Info</a>
             <a id="btn_safest_route" class="btn btn-default btn-xl js-scroll-trigger">Show Safest Route</a>
-            <a id="btn_reset_map" class="btn btn-default btn-xl js-scroll-trigger" href="#map" >Reset Map</a>
+            <a id="btn_reset_map" class="btn btn-default btn-xl js-scroll-trigger">Reset Map</a>
           </div>
         </div>
       </div>
