display directions text of safest route

--- a/index.html
+++ b/index.html
@@ -86,8 +86,10 @@
   <input type="radio" name="type" id="changemode-driving">
   <label for="changemode-driving">Driving</label> -->
 </div>
+  <div id="directions_panel"></div>
 
-<div id="map"></div>
+
+ <div id="map"></div>
 
 
     
@@ -191,6 +193,7 @@
             </p>
           </div>
         </div>
+
       </div>
     </section>
     <script src="https://code.jquery.com/jquery-3.2.1.js"
