display safests directions divs with col classes

--- a/index.html
+++ b/index.html
@@ -86,12 +86,11 @@
   <input type="radio" name="type" id="changemode-driving">
   <label for="changemode-driving">Driving</label> -->
 </div>
-  <div id="directions_panel"></div>
 
-
- <div id="map"></div>
-
-
+<div class="row" style="height:83%">
+ <div id="map" class="col-12"></div>
+<div id="directions_panel"></div>
+</div>
     
     <section class="bg-primary" id="control_panel">
       <div class="container">
